--- a/components/song-info/index.html
+++ b/components/song-info/index.html
@@ -5,7 +5,7 @@
                 text-align: center;
             }
             h1 {
-                margin-top: 10vh;
+                margin: 10vh 0 2vh 0;
                 padding: 0 2vw;
                 font-size: 3.5vw;
                 display: -webkit-box;
@@ -14,22 +14,29 @@
                 overflow: hidden;
             }
             h2 {
+                margin: 2vh 0 2vh 0;
                 padding: 0 2vw;
-                font-size: 3vw;
+                font-size: 2.5vw;
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
             }
             h3 {
+                margin: 4vh 0;
                 padding: 0 2vw;
                 font-size: 2vw;
             }
+
+            h4 {
+                margin: 4vh 0 0 0;
+                font-size: 1.5vw;
+            }
 		</style>
         <div>
+            <h4>MHZ：{{channel.name}}</h4>
             <h1>{{song.title}}</h1>
             <h2>{{song.artist}}</h2>
             <h3>{{song.albumtitle}}</h3>
-            <h3>频道：{{channel.name}}</h3>
         </div>
 	</template>
 	<script>
