--- a/components/panel-setting/index.html
+++ b/components/panel-setting/index.html
@@ -29,7 +29,7 @@
                 font-style: normal;
                 color: orangered;
                 cursor: pointer;
-                vertical-align: middle;
+                vertical-align: 1px;
             }
 
             section div {
@@ -101,7 +101,7 @@
         <div class="no-result"><span class="iconfont">&#xe646;</span>coming soon!</div>
 		<div class="setting">
             <section class="hot-key">
-                <h3 title="注意：犹豫node-webkit本身的原因，无法检测Command组合键，设置时请选择CTRL/ALT作为主按键, 如果按键中有CTRL键，在使用时需要按Command键调用"><i class="iconfont" &#xe64b;></i>热键设置</h3>
+                <h3 title="注意：犹豫node-webkit本身的原因，无法检测Command组合键，设置时请选择CTRL/ALT作为主按键, 如果按键中有CTRL键，在使用时需要按Command键调用"><i class="iconfont">&#xe64b;</i>热键设置</h3>
                 <div>
                     <p>
                         <label>暂停/播放</label>
