--- a/components/song-info/index.html
+++ b/components/song-info/index.html
@@ -5,7 +5,7 @@
                 text-align: center;
             }
             h1 {
-                margin: 10vh 0 2vh 0;
+                margin: 16vh 0 2vh 0;
                 padding: 0 2vw;
                 font-size: 3.5vw;
                 display: -webkit-box;
@@ -28,7 +28,10 @@
             }
 
             h4 {
-                margin: 4vh 0 0 0;
+                position: absolute;
+                top: 0;
+                margin: 4vh 12vw 0 10vw;
+                line-height: 1.8;
                 font-size: 1.5vw;
             }
 		</style>
