--- a/components/x-hotkey/index.html
+++ b/components/x-hotkey/index.html
@@ -28,7 +28,7 @@
 
             //媒体键
             mediaKeys : {
-                MediaPrevTrack : "NOPLAY",
+                MediaPrevTrack : "PREV",
                 MediaNextTrack : "NEXT",
                 MediaStop : "STOP",
                 MediaPlayPause : "PAUSE"
