修复第一次使用的bug

--- a/components/panel-about/index.html
+++ b/components/panel-about/index.html
@@ -62,7 +62,7 @@
 
 		</style>
 		<ul class="about">
-            <li>版本：dbfm v{{version}}</li>
+            <li>版本：TimoFM v{{version}}</li>
             <li>源码：<span on-click="{{goToLink}}"  href="{{github}}">Github</span></li>
             <li>作者：<span on-click="{{goToLink}}" href="{{weibo}}">{{weiboNick}}</span></li>
             <template if="{{!checkd}}">
